--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,4 +11,4 @@
 # for example, for 2.9: https://github.com/ansible/ansible/blob/stable-2.9/examples/ansible.cfg
 #
 [defaults]
-private_key_file = ~/.ssh/id_rsa
+private_key_file = ~/.ssh/id_ed25519
