--- a/playbooks/new.yml
+++ b/playbooks/new.yml
@@ -8,3 +8,8 @@
     - name: print the name in the file
       debug:
         msg: "My name is {{myname.stdout}}"
+
+    - name: "clone the git repo locally"
+      shell: git clone git@github.com:nitt-naman/simon-game.git
+      args:
+        chdir: ../..
